--- a/biblist.bib
+++ b/biblist.bib
@@ -352,3 +352,15 @@ volume = {42},
 journal = {SIAM Journal on Scientific Computing},
 %doi = {10.1137/19M1248777}
 }
+
+
+
+
+@article{rossini_2018,
+  title={Interpolating functions with gradient discontinuities via Variably Scaled Kernels},
+  author={M. Rossini},
+  journal={Dolomites Research Notes on Approximation},
+  year={2018},
+  volume={11},
+  pages={3-14}
+}
