--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,7 @@
 {\em Scattered data approximation} is a relatively recent and fast growing area and kernel based methods are one of the main and powerful tools in this context (see e.g.~\cite[wendland_2004] and~\cite[fasshauer_2007]). In particular, positive definite kernels allow to define function spaces where interpolation of  function values can always take place.
 
 
-My thesis deals  with the problem of approximating non-regular functions from a set of scattered data focusing the attention almost exclusively on functions of two
+This thesis deals  with the problem of approximating non-regular functions from a set of scattered data focusing the attention almost exclusively on functions of two
 variables defined on  some domain $\Omega\subset ℝ^2\!\!.\,\,$  By non-regular function we mean that
 the function or its partial derivatives are discontinuous along some  planar curves of~$\Omega$.
 
