--- a/thesis.tex
+++ b/thesis.tex
@@ -100,10 +100,10 @@
       and reconstruction
 % two-dimensional discontinuities
 
-\sec Domain segmentation
+\sec[domseg] Domain segmentation
 %Boundary detection ???
 \input domain-segmentation
-       \nonum\secc[segmexamples] Examples
+       \nonum\secc Examples
        \input domain-segmentation-examples
 
 \sec Reconstruction
