--- a/domain-segmentation-examples.tex
+++ b/domain-segmentation-examples.tex
@@ -27,10 +27,10 @@ We sample these functions at the set of $2^{10}$ Halton points (see Fasshauer~\c
 * Global shape parameter: $\varepsilon = 5\cdot10^{-2}$, locally rescaled as~$\delta = \slfrac\varepsilon d$, where $d$ is the diameter of the local set of data sites.
 * Tolerance of the regularity classifier: $\tau = 0.2$.
 \enditems
-The results for $h_1$, $h_2$, $h_3$ and~$h_4$ are visualised respectively in Figure~\ref[segmh1], \ref[segmh2], \ref[segmh3] and~\ref[segmh4].
+The results for $h_1$, $h_2$, $h_3$ and~$h_4$ are visualised respectively in Figures~\ref[segmh1], \ref[segmh2], \ref[segmh3] and~\ref[segmh4].
 
 
-Those pictures show  (at the top) the sampled function and (at the bottom) the Delaunay triangulation  of the considered set of Halton data sites, by colouring each triangle either red or green.  The connected regions of green triangles represent the sets~$\Cal I_j$ that have been determined by the algorithm; while the red triangles are either the triangles of the sets~$D_j$, or the triangles from where the algorithm couldn't start and that have not been later included in any of the sets~$\Cal I_j$.
+Each picture show  (at the top) a graph of the sampled function and (at the bottom) the Delaunay triangulation  of the considered set of Halton data sites, by colouring each triangle either red or green.  The connected regions of green triangles represent the sets~$\Cal I_j$ that have been determined by the algorithm; while the red triangles are either the triangles of the sets~$D_j$, or the triangles from where the algorithm couldn't start and that have not been later included in any of the sets~$\Cal I_j$.
 
 
 Moreover, in the pictures are also visualised the discontinuity curves of the functions. In each of the picture, the obtained set of red triangles is correct and almost minimal, in the sense that all the triangles that intersect the curves are red, and there are possibly only few other red triangles that should have indeed been coloured green. We remark that we got these results without changing any parameter from one function to another, in particular the tolerance~$\tau$.
@@ -38,7 +38,7 @@ Moreover, in the pictures are also visualised the discontinuity curves of the fu
 
 We then consider another test function, which is defined on the same domain~$\Omega=[0,1]\times[0,1]$ as follows:
 $$
-h_5(x, y) = \biggl|{1\over2} - xy\biggr|.
+h_5(x, y) = \biggl|{1\over2} - xy\biggr|. \eqmark[functionh5]
 $$
 This function is continuous but possess a discontinuity in the gradient, along the curve implicitly described by the equation~$xy =\slfrac12$.  If we run the domain segmentation algorithm with the previous parameters, then we get a picture where all the triangles are green.  Indeed all the data sites belong to the same regular domain according to the Wendland's~$\Cal C^0$ function.  But if run again the algorithm by changing $\phi$ into the Wendland's~$\Cal C^2$ function
 $$
@@ -49,7 +49,7 @@ then the discontinuity of the gradient is detected.  The result is shown in Figu
 
 
 
-Without changing any parameter, the algorithm works also for a different number~$N$ of data sites.  Generally, when more sampled data is available the detection even improves, because there is more evidence of the discontinuities.  In Figure~\ref[segm-11] we show the output of the algorithm  for the test functions $h_2$ and~$h_4$ sampled at~$2^{11}$ Halton points, when the Wendland's~$\Cal C^0$ function is used.  On the other side, when the available data points are too few (typically, when they are less than~$2^9$), there may not be enough evidence of the discontinuities and the algorithms may reasonably fail to correctly identify the subdomains. 
+Without changing any parameter, the algorithm works also for a different number~$N$ of data sites.  Generally, when more sampled data is available the detection even improves, because there is more evidence of the discontinuities.  In Figure~\ref[segm-11] we show the output of the algorithm  for the test functions $h_2$ and~$h_4$ sampled at $2^{11}$~Halton points, when the Wendland's~$\Cal C^0$ function is used.  On the other side, when the available data points are too few (typically, when they are less than~$2^9$), there may not be enough evidence of the discontinuities and the algorithms may reasonably fail to correctly identify the subdomains. 
 
 
 \vfill
@@ -68,6 +68,7 @@ Without changing any parameter, the algorithm works also for a different number~
 \egroup
 \cskip
 \caption/f
+Function $h_1$.
 \vss
 \endinsert
 
@@ -82,6 +83,7 @@ Without changing any parameter, the algorithm works also for a different number~
 \egroup
 \cskip
 \caption/f
+Function $h_2$.
 \vss
 \endinsert
 
@@ -96,6 +98,7 @@ Without changing any parameter, the algorithm works also for a different number~
 \egroup
 \cskip
 \caption/f
+Function $h_3$.
 \vss
 \endinsert
 
@@ -111,6 +114,7 @@ Without changing any parameter, the algorithm works also for a different number~
 \egroup
 \cskip
 \caption/f
+Function $h_4$.
 \vss
 \endinsert
 
@@ -128,6 +132,7 @@ Without changing any parameter, the algorithm works also for a different number~
 \egroup
 \cskip
 \caption/f
+Function $h_5$.
 \vss
 \endinsert
 
@@ -144,6 +149,7 @@ Without changing any parameter, the algorithm works also for a different number~
 \egroup
 \cskip
 \caption/f
+Functions $h_2$ (top) and~$h_4$ (bottom).
 \vss
 \endinsert
 
